--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^4.7.1",
-    "styled-components": "^6.1.14"
+    "styled-components": "^6.1.14",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
